--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@nuxt/fonts": "^0.13.0",
     "@nuxt/image": "^2.0.0",
     "@nuxt/test-utils": "^3.23.0",
+    "firebase": "^12.8.0",
+    "firebase-admin": "^13.6.0",
     "nuxt": "^4.3.0",
+    "nuxt-icon": "^1.0.0-beta.7",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@playwright/test": "^1.58.0",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^20.4.0",
