--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
+    "@iconify/vue": "^5.0.0",
     "@nuxt/fonts": "^0.13.0",
     "@nuxt/image": "^2.0.0",
     "@nuxt/test-utils": "^3.23.0",
     "firebase": "^12.8.0",
     "firebase-admin": "^13.6.0",
     "nuxt": "^4.3.0",
-    "nuxt-icon": "^1.0.0-beta.7",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
