--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
-    "@iconify/vue": "^5.0.0",
     "@nuxt/fonts": "^0.13.0",
+    "@nuxt/icon": "^2.2.1",
     "@nuxt/image": "^2.0.0",
     "@nuxt/test-utils": "^3.23.0",
     "firebase": "^12.8.0",
