--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ NUXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
 NUXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
 NUXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
 NUXT_PUBLIC_FIREBASE_APP_ID=your_app_id
+NUXT_PUBLIC_FIREBASE_DATABASE_URL=https://your_project_id.firebaseio.com
 
 # Firebase Admin SDK Configuration (Server-side only - Keep Secret!)
 FIREBASE_PROJECT_ID=your_project_id
