--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@nuxt/icon": "^2.2.1",
     "@nuxt/image": "^2.0.0",
     "@nuxt/test-utils": "^3.23.0",
+    "@pinia/nuxt": "^0.11.3",
     "firebase": "^12.8.0",
     "firebase-admin": "^13.6.0",
     "nuxt": "^4.3.0",
+    "pinia": "^3.0.4",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
