--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxt/image": "^2.0.0",
     "@nuxt/test-utils": "^3.23.0",
     "@pinia/nuxt": "^0.11.3",
+    "date-fns": "^4.1.0",
     "firebase": "^12.8.0",
     "firebase-admin": "^13.6.0",
     "nuxt": "^4.3.0",
